style.css
/*  style.css for udacity-neighborhood-map project
    Basic styling is based on previous Udacity project FEND-P1-Portfolio, matched
    to give my portfolio continuity in visual theme.

    The project uses Bootstrap to provide the view framework.
 */

body {
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
	-ms-box-sizing: border-box;
	box-sizing: border-box;
	font-family: "Merriweather", Geneva, sans-serif;
    background-color: #054f25;
    color: #a576bc;

    /*
     * Default font size for XS (phone) sized viewports. The body style
     * sets the 1-em size; other styles' sizes are based on em sizes.
     */
    font-size: 75%;
}
/* Font size for larger viewports */
@media (min-width: 768px) {
    body {
        font-size: 100%;
    }
}

.filterLine {
    padding: 5px 0;
}
.filterLine a {
    color: #777;
}
.filterImg {
    width: 32px;
}
.btn-default {
    background-color: rgb(46, 145, 28); /*fallback*/
    background-color: rgba(0,0,0,0.2);
    color: white;
    border-radius: 18px;
    border-width: 2px;
    border-style: outset;
    border-color: buttonface;
}

#nmvList {
    background-color: #11743c;
    color: white;
}
#nmvListHead {
    min-height: 10vh;
}
.nmvListItem {
    min-height: 5em;
}
.listText {
    padding-right: 15px;
}
#listBodyRow {
    max-height: 80vh;
    overflow: auto;
}
#nmvList .highlight {
    background-color: white;
    color: #054f25;
}
#nmvListHead, .nmvListItem {
    border: 10px solid #054f25;
    background-color: #0c8440;
    font-size: 1.5em;
}
#nmvListHead p, .nmvListItem p {
    margin: 0;
}
#nmvListHead {
    border-radius: 18px;
}
#nmvListHeaderRow {
    background-color: #054f25;
}
.nmvListItem:hover {
    background-color: #a8efc6;
    color: #054f25;
    display: inline;
}
.listItemName {
    font-height: 2.5em;
    font-weight: 900;
}

.pinnedBtn {
    top: 2px;
}
.detailBtn {
    bottom: 2px;
}
.pinnedBtn, .detailBtn {
    position: absolute;
    right: 4px;
    height: 46%;
    width: auto;
    background-color: rgb(46, 145, 28); /*fallback*/
    border-radius: 50%;
    background-color: rgba(0,0,0,0.4);
    -webkit-tap-highlight-color: rgba(0,0,0,0);
}
.pinnedBtn:hover, .detailBtn:hover {
    text-decoration: underline;
    background-color: rgba(0,0,0,0.5);
}

#nmvMap {
    background-color: white;
    height: 90vh;
}
#welcomeRow {
    display: flex;
    flex-direction: row;
}
#welcome {
    font-size: 3em;
    min-height: 10vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* nmModal element grabs the whole screen when displayed */
.nmModal {
    display: none;      /* reset programatically */
    position: fixed;
    z-index: 1;
    padding-top: 5em;  /* shadow area above modal */
    left: 0;
    top:0;
    width:100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);   /*fallback*/
    background-color: rgba(0,0,0,0.4);  /* body shows through */
}
.nmModalContent {
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 80%;
/*    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19); */
    box-shadow: 0 10px 40px 0 rgba(0,0,0,0.5), 0 10px 40px 0 rgba(0,0,0,0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s;
    border-radius: 8px;
    color: #a576bc;
}

/* Drop-from-top animation for modal window
 *  (from http://www.w3schools.com/howto/tryit.asp?
  * filename=tryhow_css_modal2
 */
@-webkit-keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}
@keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

.modalCloseBtn {
    color: gray;
    float: right;
    font-size: 2em;
    font-weight: bold;
}
.modalCloseBtn:hover, .modalCloseBtn:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}
.nmModalHeader {
    padding: 2px 16px;
    border-bottom: 1px solid #e5e5e5;
}
.modal-href {
    text-align: right;
    font-weight: bold;
    font-size: 0.8em;
    position: absolute;
    right: 10px;
    top: 22px;
}
@media (max-width: 664px) {
    .modal-href {
        top: 42px;
    }
}
.nmModalBody {
    padding: 2px 16px;
    font-size: 1.3em;
}
a {
    color: #a576bc;
}
.nmModalFooter {
    padding: 2px 16px;
    border-top: 1px solid #e5e5e5;
}
.modalScrollRow {
    max-height: 150px;
    overflow: auto;
    margin: 3px 0;
}
@media (max-width: 991px) {
    .yDetails {
        border-top: 1px solid #e5e5e5;
        margin-top: 10px;
        padding-top: 5px;
    }
}
.popover {
    color: black;
}
.gDetails {
    border-right: 1px solid #e5e5e5;
}
.gdIndent {
    margin-left: 2em;
    font-weight: normal;
    display: block;
}
.gdItem {
    font-weight: bold;
}
.gdItemVal{
    font-weight: normal;
}

/* #findBox is the input for the user to specify new places
 * to find. It's initially hidden, and gets displayed when
 * the user requests a search. Code source is
 * https://developers.google.com/maps/documentation/javascript/examples/places-searchbox
 */
 #findBox {
    margin-top: 10px;
    border: 1px solid transparent;
    border-radius: 2px 0 0 2px;
    height: 32px;
    outline: none;
    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.7);
    background-color: #fff;
    font-family: Roboto;
    font-size: 15px;
    font-weight: 300;
    margin-left: 12px;
    padding: 0 11px 0 13px;
    text-overflow: ellipsis;
    width: 300px;
 }

